[Minor] Avoid masking the "move" action button on mobile

--- a/public/resources/css/gamelayout.css
+++ b/public/resources/css/gamelayout.css
@@ -371,6 +371,11 @@
 /* 
  * Actions at the right of the map
  */
+#actions_panel {
+    position:absolute;
+    right:0.5rem; /* Avoids shifting the buttons to the left when the scrollbar appears */
+    width:24.6rem;
+}
 /* The big round action buttons with icon */
 #round_actions {
     display:flex;
