--- a/public/resources/css/responsive.css
+++ b/public/resources/css/responsive.css
@@ -52,4 +52,7 @@
     #city_iso {
         display:none;
     }
+    #actions_panel {
+        left:0;
+    }
 }
